--- a/public/css/media-queries.css
+++ b/public/css/media-queries.css
@@ -62,13 +62,13 @@
    #resume h1 { font: 16px/24px 'opensans-bold', sans-serif; }
    #resume .main-col { padding-right: 5%; }   
 
-   /* Testimonials Section
+   /* Mottos Section
    ------------------------------------------------------------------- */
-   #testimonials .header-col h1:before {
+   #mottos .header-col h1:before {
       font-size: 66px;
       line-height: 66px;
    }
-   #testimonials blockquote p {
+   #mottos blockquote p {
       font-size: 22px;
       line-height: 46px;      
    }
@@ -258,19 +258,19 @@
    .popup-modal {	max-width: 85%; }
 
 
-   /* Testimonials Section
+   /* Mottos Section
    ----------------------------------------------------------------------- */
-   #testimonials .text-container { text-align: center; }
-   #testimonials h1 {
+   #mottos .text-container { text-align: center; }
+   #mottos h1 {
       font: 16px/24px 'opensans-bold', sans-serif;
       text-align: center;
       margin-bottom: 30px;
       text-shadow: 0px 1px 3px rgba(0, 0, 0, 1);
    }
-   #testimonials h1 span { display: block; }
-   #testimonials .header-col h1:before { content: none; }
-   #testimonials blockquote { padding-bottom: 24px; }
-   #testimonials blockquote p {
+   #mottos h1 span { display: block; }
+   #mottos .header-col h1:before { content: none; }
+   #mottos blockquote { padding-bottom: 24px; }
+   #mottos blockquote p {
       font-size: 20px;
       line-height: 42px;      
    }
