Mottos Added / Transform Effect Added

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -440,7 +440,6 @@ ul#nav li.current a { color: #F06000; }
 .portfolio-item .item-wrap {
    background: #fff;
 
-   overflow: hidden;
    position: relative;
 
    -webkit-transition: all 0.3s ease-in-out;
@@ -452,6 +451,10 @@ ul#nav li.current a { color: #F06000; }
 .portfolio-item .item-wrap a {
    display: block;
    cursor: pointer;
+}
+.portfolio-item .item-wrap a:hover {
+   transform: scale(1.1, 1.1);
+   transition: 1s all;
 }
 
 /* overlay */
